1. **用户登录 / 注册**：系统身份入口；**前置**：无；**产出**：JWT 令牌 2. **企业认证审核**：决定企业是否具备生产资格；**前置**：管理员登录；**产出**：`company_auth.review_status` 3. **企业信息建档**：审核通过后系统自动初始化企业主档（`company`），企业可再完善信息；**前置**：企业认证通过 4. **产品批次建档**：创建生产批次（`product_batch`）；**前置**：企业存在且可用 5. **二维码生成与绑定**：创建溯源码（`qs_code`）并关联批次；**前置**：批次存在、企业审核通过 6. **二维码签名 / 验真**：生成 SM2 国密签名；**前置**：二维码主数据已生成 7. **二维码上链存证**：写入区块链存证（`blockchain_proof`）；**前置**：二维码生成成功 8. **扫码采集**：记录扫码日志（`scan_log`）+ 设备地理画像；**前置**：二维码可用 9. **规则 / AI 风险判定**：规则引擎 + 复用特征计算（`reuse_pattern`）；**前置**：有扫码数据 10. **生成预警记录与动作**：写入预警（`alert_record`）与执行动作（`alert_action`）；**前置**：风险命中 11. **高风险联动处置**：自动冻结二维码（`qs_code.status=frozen`）；**前置**：达到冻结策略